finally fixed the collapsed navbar bug :)

--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -120,7 +120,7 @@
             height: 5rem;
             width: 5rem;
             text-align: center;
-            position: fixed;
+            position: absolute;
             top: 3.2rem;
             right: 4rem;
             border-radius: 50%;
@@ -189,6 +189,7 @@
         &__checkbox:checked ~ &__nav-list{
             opacity: 1;
             width: 100%;
+            height: 100vh;
         }
         
         &__icon{
