--- a/sass/components/_team-member.scss
+++ b/sass/components/_team-member.scss
@@ -1,5 +1,5 @@
 .team-member{
-    height: 43rem;
+    height: 48rem;
     border-radius: 3px;
     overflow: hidden;
     box-shadow:$box-shadow-hover;
@@ -96,7 +96,7 @@
 
             li{
                 text-align: center;
-                font-size: 1.6rem;
+                font-size: 1.9rem;
                 padding: 1rem;
                 text-transform: capitalize;
 
